@@ -1,3 +1,10 @@
+2008-07-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/data/time/ohlc/OHLCSeriesCollection.java
+    (getXPosition): New method,
+    (setXPosition): Likewise,
+    (equals): Updated for xPosition attribute.
+
 2008-07-09  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/plot/XYPlot.java
